# ivyterm

./: Cargo.nix  Cargo.toml  INSTALL.md  README.md  TODO  flake.nix  meson.build
data/: com.tomiyou.ivyTerm.desktop  com.tomiyou.ivyTerm.metainfo.xml  meson.build
flatpak/: cargo-sources.json  com.ivyterm.Tomiyou.json  com.tomiyou.ivyTerm.json
packaging/: com.tomiyou.ivyTerm.json
packaging/flatpak/: cargo-sources.json  com.tomiyou.ivyTerm.json
src/: default.toml  error.rs  global_state.rs  helpers.rs  keyboard.rs  main.rs  meson.build  modals.rs  mux.rs  separator.rs  ssh.rs  style.css  terminal.rs  tmux.rs
src/application/: config.rs  imp.rs  mod.rs  style.css
src/config/: mod.rs  terminal.rs  tmux.rs
src/container/: imp.rs  mod.rs
src/container/layout/: imp.rs  mod.rs
src/container/layout_default/: imp.rs  mod.rs
src/container/layout_tmux/: imp.rs  mod.rs
src/container/separator/: imp.rs  mod.rs
src/keyboard/: keybindings.rs  mod.rs
src/mux/: mod.rs  pane.rs  terminal.rs
src/mux/toplevel/: imp.rs  mod.rs
src/normal_widgets/: mod.rs
src/normal_widgets/container/: imp.rs  mod.rs
src/normal_widgets/container/layout/: imp.rs  mod.rs
src/normal_widgets/container/layout_default/: imp.rs  mod.rs
src/normal_widgets/container/separator/: imp.rs  mod.rs
src/normal_widgets/terminal/: imp.rs  mod.rs
src/normal_widgets/toplevel/: imp.rs  mod.rs
src/normal_widgets/toplevel/layout/: imp.rs  mod.rs
src/normal_widgets/window/: imp.rs  mod.rs
src/pane/: imp.rs  mod.rs
src/paned/: imp.rs  mod.rs
src/paned/layout/: imp.rs  mod.rs
src/settings/: default.rs  general.rs  keybindings.rs  mod.rs  tmux.rs
src/settings_window/: general.rs  keybindings.rs  mod.rs  tmux.rs
src/settings_window/keybindings/: imp.rs  mod.rs
src/terminal/: imp.rs  mod.rs
src/tmux/: layout.rs  mod.rs
src/tmux_api/: mod.rs  parse_layout.rs  receive.rs  send.rs
src/tmux_widgets/: api.rs  mod.rs
src/tmux_widgets/container/: imp.rs  mod.rs
src/tmux_widgets/container/layout/: imp.rs  mod.rs
src/tmux_widgets/container/layout_default/: mod.rs
src/tmux_widgets/container/layout_tmux/: imp.rs  mod.rs
src/tmux_widgets/container/separator/: imp.rs  mod.rs
src/tmux_widgets/separator/: imp.rs  mod.rs
src/tmux_widgets/terminal/: imp.rs  mod.rs
src/tmux_widgets/toplevel/: imp.rs  mod.rs  tmux.rs
src/tmux_widgets/toplevel/layout/: imp.rs
src/tmux_widgets/window/: imp.rs  mod.rs  tmux.rs  tmux_layout_sync.rs  tmux_translation.rs
src/toplevel/: imp.rs  mod.rs
src/window/: imp.rs  layout.rs  mod.rs  tmux.rs  tmux_layout_translation.rs  tmux_translation.rs
