[package]
name = "ivyterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
dirs = "5.0.1"
enumflags2 = { version = "0.7.10", features = ["std"] }
glib = "0.20.5"
gtk4 = { version = "0.9.3", features = ["v4_10"] }
lazy_static = "1.5.0"
libadwaita = "0.7.1"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
vte4 = "0.8.0"

