[package]
name = "ivyterm"
version = "1.0.4"
edition = "2021"
license = "GPL v3"
authors = ["Tomaž Hribernik <tomaz.hribernik@protonmail.com>"]
description = "Terminal emulator with Tmux support implemented in gtk4-rs and VTE4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
const_format = "0.2.34"
dirs = "5.0.1"
enumflags2 = { version = "0.7.10", features = ["std"] }
glib = "0.20.7"
gtk4 = "0.9.4"
lazy_static = "1.5.0"
libadwaita = "0.7.1"
log = "0.4.22"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
serde = { version = "1.0.216", features = ["derive"] }
ssh2 = "0.9.4"
ssh2-config = "0.2.3"
thiserror = "2.0.9"
toml = "0.8.19"
vmap = "0.6.3"
vte4 = { version = "0.8.0", features = ["v0_70"] }

[package.metadata.deb]
assets = [
    ["target/release/ivyterm", "usr/bin/", "755"],
    ["data/com.tomiyou.ivyTerm.desktop", "usr/share/applications/", "644"],
    ["data/com.tomiyou.ivyTerm.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

[[package.metadata.generate-rpm.assets]]
source = "target/release/ivyterm"
dest = "/usr/bin/ivyterm"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "data/com.tomiyou.ivyTerm.desktop"
dest = "/usr/share/applications/com.tomiyou.ivyTerm.desktop"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "data/com.tomiyou.ivyTerm.svg"
dest = "/usr/share/icons/hicolor/scalable/apps/com.tomiyou.ivyTerm.svg"
mode = "0644"
